syntax = "proto3";

option csharp_namespace = "TripsService";

service Trips {
  rpc NotifyNewOrder (NewOrderRequest) returns (NotificationResponse);
}

message NewOrderRequest {
  string orderId = 1;
  string tripId = 2;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}